--- a/hr_holidays_public_germany/wizard/copy_public_holidays_view.xml
+++ b/hr_holidays_public_germany/wizard/copy_public_holidays_view.xml
@@ -36,6 +36,8 @@
                 <form string="Reset Public Holidays">
                     <group col="2" colspan="2">
                         <field name="year" />
+                        <field name="country_id" />
+                        <field name="state_id" />
                     </group>
                     <footer>
                         <button name="action_reset_holidays" string="Reset" type="object" class="btn-primary"/>
