--- a/hr_holidays_public_generator/wizard/hr_holidays_public_generator_view.xml
+++ b/hr_holidays_public_generator/wizard/hr_holidays_public_generator_view.xml
@@ -5,11 +5,12 @@
         <field name="model">hr.holidays.public.generator</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
-            <form string="generate Public Holidays">
+            <form string="Generate Public Holidays">
                 <group col="2" colspan="2">
                     <field name="year" />
-                    <field name="country_id" />
-                    <field name="state_id" />
+                    <field name="country_id" options="{'no_create': True}"/>
+                    <field name="state_id" options="{'no_create': True}"/>
+                    <field name="template_id" options="{'no_create': True}"/>
                 </group>
                 <footer>
                     <button name="action_run" string="Generate" type="object" class="btn-primary"/>
