add domain for field state_id in view definition

--- a/hr_holidays_public_generator/wizard/hr_holidays_public_generator_view.xml
+++ b/hr_holidays_public_generator/wizard/hr_holidays_public_generator_view.xml
@@ -9,7 +9,7 @@
                 <group col="2" colspan="2">
                     <field name="year" />
                     <field name="country_id" options="{'no_create': True}"/>
-                    <field name="state_id" options="{'no_create': True}"/>
+                    <field name="state_id" options="{'no_create': True}" domain="[('country_id', '=', country_id)]"/>
                     <field name="template_id" options="{'no_create': True}"/>
                 </group>
                 <footer>
